--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -4,12 +4,28 @@
     <header/>
     <body>
       <trans-unit id="loginHeading" xml:space="preserve">
-        <source>Login with Azure</source>
-        <target>Mit Azure anmelden</target>
+        <source>Sign in with Microsoft</source>
+        <target>Mit Microsoft anmelden</target>
       </trans-unit>
       <trans-unit id="loginLink" xml:space="preserve">
-        <source>Login with Azure</source>
-        <target>Mit Azure anmelden</target>
+        <source>Sign in with Microsoft</source>
+        <target>Mit Microsoft anmelden</target>
+      </trans-unit>
+      <trans-unit id="tx_okazurelogin.loginlink" xml:space="preserve">
+        <source>Sign in with Microsoft</source>
+        <target>Mit Microsoft anmelden</target>
+      </trans-unit>
+      <trans-unit id="backendLogin.label" xml:space="preserve">
+        <source>Azure Login</source>
+        <target>Azure-Anmeldung</target>
+      </trans-unit>
+      <trans-unit id="backendLogin.button" xml:space="preserve">
+        <source>Sign in with Microsoft</source>
+        <target>Mit Microsoft anmelden</target>
+      </trans-unit>
+      <trans-unit id="tx_okazurelogin.logoutlink" xml:space="preserve">
+        <source>Sign out</source>
+        <target>Abmelden</target>
       </trans-unit>
     </body>
   </file>
