--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -4,12 +4,28 @@
         <header/>
         <body>
             <trans-unit id="loginHeading" xml:space="preserve">
-                <source>Login with Azure</source>
-                <target>Se connecter avec Azure</target>
+                <source>Sign in with Microsoft</source>
+                <target>Se connecter avec Microsoft</target>
             </trans-unit>
             <trans-unit id="loginLink" xml:space="preserve">
-                <source>Login with Azure</source>
-                <target>Se connecter avec Azure</target>
+                <source>Sign in with Microsoft</source>
+                <target>Se connecter avec Microsoft</target>
+            </trans-unit>
+            <trans-unit id="tx_okazurelogin.loginlink" xml:space="preserve">
+                <source>Sign in with Microsoft</source>
+                <target>Se connecter avec Microsoft</target>
+            </trans-unit>
+            <trans-unit id="backendLogin.label" xml:space="preserve">
+                <source>Azure Login</source>
+                <target>Connexion Azure</target>
+            </trans-unit>
+            <trans-unit id="backendLogin.button" xml:space="preserve">
+                <source>Sign in with Microsoft</source>
+                <target>Se connecter avec Microsoft</target>
+            </trans-unit>
+            <trans-unit id="tx_okazurelogin.logoutlink" xml:space="preserve">
+                <source>Sign out</source>
+                <target>Se d&#xe9;connecter</target>
             </trans-unit>
         </body>
     </file>
