--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -9,7 +9,16 @@
                 <source>A TYPO3 extension to login using Microsoft Entra and MSGraph API.</source>
             </trans-unit>
             <trans-unit id="tx_okazurelogin.loginlink" xml:space="preserve">
-                <source>Login with Azure</source>
+                <source>Sign in with Microsoft</source>
+            </trans-unit>
+            <trans-unit id="backendLogin.label" xml:space="preserve">
+                <source>Azure Login</source>
+            </trans-unit>
+            <trans-unit id="backendLogin.button" xml:space="preserve">
+                <source>Sign in with Microsoft</source>
+            </trans-unit>
+            <trans-unit id="tx_okazurelogin.logoutlink" xml:space="preserve">
+                <source>Sign out</source>
             </trans-unit>
         </body>
     </file>
