--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -1,39 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2">
-    <file source-language="en" datatype="plaintext" original="messages" date="2023-03-18T12:00:00Z" product-name="ok_azure_login">
+    <file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2024-07-31T00:00:00Z" product-name="ok_azure_login">
+        <header/>
         <body>
             <trans-unit id="tx_okazurelogin.name" xml:space="preserve">
                 <source>Azure Login</source>
+                <target>Azure-Anmeldung</target>
             </trans-unit>
             <trans-unit id="tx_okazurelogin.description" xml:space="preserve">
                 <source>Login button for Microsoft Entra ID (Azure AD) authentication</source>
+                <target>Anmelde-Button f&#xfc;r Microsoft Entra ID (Azure AD) Authentifizierung</target>
             </trans-unit>
             <trans-unit id="tx_okazurelogin_logout.name" xml:space="preserve">
                 <source>Azure Logout</source>
+                <target>Azure-Abmeldung</target>
             </trans-unit>
             <trans-unit id="tx_okazurelogin_logout.description" xml:space="preserve">
                 <source>Logout button for Microsoft Entra ID (Azure AD) authentication</source>
+                <target>Abmelde-Button f&#xfc;r Microsoft Entra ID (Azure AD) Authentifizierung</target>
             </trans-unit>
             <trans-unit id="flexform.sheetTitle.settings" xml:space="preserve">
                 <source>Settings</source>
+                <target>Einstellungen</target>
             </trans-unit>
             <trans-unit id="flexform.buttonTheme" xml:space="preserve">
                 <source>Button theme</source>
+                <target>Button-Design</target>
             </trans-unit>
             <trans-unit id="flexform.buttonTheme.dark" xml:space="preserve">
                 <source>Dark (recommended)</source>
+                <target>Dunkel (empfohlen)</target>
             </trans-unit>
             <trans-unit id="flexform.buttonTheme.light" xml:space="preserve">
                 <source>Light</source>
+                <target>Hell</target>
             </trans-unit>
             <trans-unit id="flexform.microsoftSignOut" xml:space="preserve">
                 <source>Also sign out from Microsoft</source>
+                <target>Auch von Microsoft abmelden</target>
             </trans-unit>
             <trans-unit id="flexform.microsoftSignOut.description" xml:space="preserve">
                 <source>Redirect through Microsoft logout endpoint</source>
+                <target>&#xdc;ber den Microsoft-Abmeldeendpunkt weiterleiten</target>
             </trans-unit>
             <trans-unit id="flexform.redirectUrl" xml:space="preserve">
                 <source>Redirect URL after logout (leave empty for site root)</source>
+                <target>Weiterleitungs-URL nach Abmeldung (leer lassen f&#xfc;r Startseite)</target>
             </trans-unit>
         </body>
     </file>
