--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -2,6 +2,9 @@
 <xliff version="1.2">
     <file source-language="en" datatype="plaintext" original="messages" date="2023-03-18T12:00:00Z" product-name="ok_azure_login">
         <body>
+            <trans-unit id="newContentElement.wizardItems.azurelogin" xml:space="preserve">
+                <source>Azure Login</source>
+            </trans-unit>
             <trans-unit id="tx_okazurelogin.name" xml:space="preserve">
                 <source>Azure Login</source>
             </trans-unit>
