--- a/Resources/Private/Language/de.locallang_be_module.xlf
+++ b/Resources/Private/Language/de.locallang_be_module.xlf
@@ -47,13 +47,29 @@
                 <source>Backend login configuration for this site. Each site with valid backend credentials will show a separate login button.</source>
                 <target>Backend-Anmeldekonfiguration f&#xfc;r diese Website. Jede Website mit g&#xfc;ltigen Backend-Zugangsdaten zeigt einen eigenen Anmelde-Button.</target>
             </trans-unit>
+            <trans-unit id="label.enabled" xml:space="preserve">
+                <source>Enabled</source>
+                <target>Aktiviert</target>
+            </trans-unit>
+            <trans-unit id="label.enabled.description" xml:space="preserve">
+                <source>Enable or disable this backend login configuration. Disabled configurations will not show a login button.</source>
+                <target>Diese Backend-Anmeldekonfiguration aktivieren oder deaktivieren. Deaktivierte Konfigurationen zeigen keinen Anmelde-Button.</target>
+            </trans-unit>
             <trans-unit id="label.backendLoginLabel" xml:space="preserve">
                 <source>Login Button Label</source>
                 <target>Anmelde-Button Bezeichnung</target>
             </trans-unit>
             <trans-unit id="label.backendLoginLabel.description" xml:space="preserve">
-                <source>Header shown above the login button on the backend login page (e.g. company name). If empty, the site identifier is used.</source>
-                <target>&#xdc;berschrift &#xfc;ber dem Anmelde-Button auf der Backend-Anmeldeseite (z.B. Firmenname). Wenn leer, wird die Website-Kennung verwendet.</target>
+                <source>Required. Header shown above the login button on the backend login page (e.g. company name).</source>
+                <target>Erforderlich. &#xdc;berschrift &#xfc;ber dem Anmelde-Button auf der Backend-Anmeldeseite (z.B. Firmenname).</target>
+            </trans-unit>
+            <trans-unit id="label.showLabel" xml:space="preserve">
+                <source>Show Label on Login</source>
+                <target>Bezeichnung bei Anmeldung anzeigen</target>
+            </trans-unit>
+            <trans-unit id="label.showLabel.description" xml:space="preserve">
+                <source>Show the login button label above the sign-in button on the backend login page.</source>
+                <target>Die Anmelde-Button-Bezeichnung &#xfc;ber dem Anmelde-Button auf der Backend-Anmeldeseite anzeigen.</target>
             </trans-unit>
             <trans-unit id="label.tenantId" xml:space="preserve">
                 <source>Tenant ID</source>
@@ -82,6 +98,10 @@
             <trans-unit id="label.clientSecret.existing" xml:space="preserve">
                 <source>A client secret is stored (encrypted). Leave empty to keep it, or enter a new value to replace it.</source>
                 <target>Ein Client-Geheimnis ist gespeichert (verschl&#xfc;sselt). Leer lassen um es beizubehalten, oder neuen Wert eingeben um es zu ersetzen.</target>
+            </trans-unit>
+            <trans-unit id="label.clientSecret.cloned" xml:space="preserve">
+                <source>Client secret will be copied from the backend configuration on save.</source>
+                <target>Das Client-Geheimnis wird beim Speichern von der Backend-Konfiguration kopiert.</target>
             </trans-unit>
             <trans-unit id="label.redirectUriFrontend" xml:space="preserve">
                 <source>Redirect URI (Frontend)</source>
@@ -134,6 +154,46 @@
             <trans-unit id="label.noBackendConfigs" xml:space="preserve">
                 <source>No backend login configurations found. Click "Add Backend Login Configuration" to create one.</source>
                 <target>Keine Backend-Anmeldekonfigurationen gefunden. Klicken Sie auf &#x201e;Backend-Anmeldekonfiguration hinzuf&#xfc;gen&#x201c;, um eine zu erstellen.</target>
+            </trans-unit>
+            <trans-unit id="label.cloneFromBackend" xml:space="preserve">
+                <source>Clone from Backend Config</source>
+                <target>Von Backend-Konfiguration klonen</target>
+            </trans-unit>
+            <trans-unit id="label.cloneFromBackend.description" xml:space="preserve">
+                <source>Copy Tenant ID, Client ID, and Client Secret from an existing backend configuration</source>
+                <target>Mandanten-ID, Client-ID und Client-Geheimnis von einer bestehenden Backend-Konfiguration kopieren</target>
+            </trans-unit>
+            <trans-unit id="label.cloneFromBackend.placeholder" xml:space="preserve">
+                <source>-- Select a backend configuration --</source>
+                <target>-- Backend-Konfiguration w&#xe4;hlen --</target>
+            </trans-unit>
+            <trans-unit id="label.cloneFromOther" xml:space="preserve">
+                <source>Clone from other Config</source>
+                <target>Von anderer Konfiguration klonen</target>
+            </trans-unit>
+            <trans-unit id="label.cloneFromOther.description" xml:space="preserve">
+                <source>Copy Tenant ID, Client ID, and Client Secret from another backend configuration</source>
+                <target>Mandanten-ID, Client-ID und Client-Geheimnis von einer anderen Backend-Konfiguration kopieren</target>
+            </trans-unit>
+            <trans-unit id="label.cloneFromOther.placeholder" xml:space="preserve">
+                <source>-- Select another configuration --</source>
+                <target>-- Andere Konfiguration w&#xe4;hlen --</target>
+            </trans-unit>
+            <trans-unit id="confirm.clone.title" xml:space="preserve">
+                <source>Clone Backend Configuration</source>
+                <target>Backend-Konfiguration klonen</target>
+            </trans-unit>
+            <trans-unit id="confirm.clone.button" xml:space="preserve">
+                <source>Clone</source>
+                <target>Klonen</target>
+            </trans-unit>
+            <trans-unit id="confirm.clone.redirectNote" xml:space="preserve">
+                <source>Please configure a separate Redirect URI for frontend use. Do not reuse the backend Redirect URI.</source>
+                <target>Bitte konfigurieren Sie eine separate Weiterleitungs-URI f&#xfc;r die Frontend-Nutzung. Verwenden Sie nicht die Backend-Weiterleitungs-URI.</target>
+            </trans-unit>
+            <trans-unit id="confirm.clone.redirectNoteBackend" xml:space="preserve">
+                <source>Please configure the correct Redirect URI for this backend configuration.</source>
+                <target>Bitte konfigurieren Sie die korrekte Weiterleitungs-URI f&#xfc;r diese Backend-Konfiguration.</target>
             </trans-unit>
             <trans-unit id="confirm.delete.title" xml:space="preserve">
                 <source>Delete Configuration</source>
