--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -59,6 +59,10 @@
                 <source>Azure Login is not configured. Please contact the administrator.</source>
                 <target>Azure Login n'est pas configur&#xe9;. Veuillez contacter l'administrateur.</target>
             </trans-unit>
+            <trans-unit id="tx_okazurelogin.error.account_pending" xml:space="preserve">
+                <source>Your account has been created but is not yet activated. An administrator must enable your account before you can sign in.</source>
+                <target>Votre compte a &#xe9;t&#xe9; cr&#xe9;&#xe9; mais n'est pas encore activ&#xe9;. Un administrateur doit activer votre compte avant que vous puissiez vous connecter.</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
